--- a/LangLearn-portlet/docroot/WEB-INF/liferay-plugin-package.properties
+++ b/LangLearn-portlet/docroot/WEB-INF/liferay-plugin-package.properties
@@ -1,6 +1,6 @@
 name=LangLearn
 module-group-id=liferay
-module-incremental-version=1.0
+module-incremental-version=1.1
 tags=education, language, learning, translation
 short-description=Language Learning app allows you to learn foreign languages within your community!
 change-log=
@@ -33,7 +33,8 @@ security-manager-get-bean-property=\
     com.liferay.portal.kernel.util.InfrastructureUtil,\
     com.liferay.portal.kernel.util.PropsUtil,\
     com.liferay.portal.kernel.xml.SAXReaderUtil,\
-    com.liferay.portal.util.PortalUtil
+    com.liferay.portal.util.PortalUtil,\
+    com.liferay.portal.model.ModelHintsUtil
 	
 security-manager-services[portal]=\
     com.liferay.counter.service.CounterLocalService
